修改为质押指定数量配置，数量在runtime里配置

--- a/作业笔记.md
+++ b/作业笔记.md
@@ -33,7 +33,7 @@ use frame_support::{ traits::{Get} };
 
 pub trait Trait {
     // 名字 必须跟 runtime 的 trait 的 type 相同！相同！相同！且首字母大写！首字母大写！首字母大写！
-    pub KittyReserveFunds = Get<u8>;
+    pub KittyReserveFunds: Get<u64>;
 }
 
 decl_module! {
