添加视频bug说明和修复bug代码

--- a/作业笔记.md
+++ b/作业笔记.md
@@ -1,3 +1,23 @@
+## 视频中的一个bug
+- transfer 没有做边界和kitties拥有者的判断,然后直接就执行了transfer了
+
+我的修改是添加了这个kittyid和拥有者的判断
+```rust
+// 修改前
+pub fn transfer(origin, to: T::AccountId, kitty_id: T::KittyIndex) -> DispatchResult {
+    let sender = ensure_signed(origin.clone())?;
+    <KittyOwner<T>>::insert(kitty_id, to.clone());
+    // ...
+}
+// 修改后代码
+
+pub fn transfer(origin, to: T::AccountId, kitty_id: T::KittyIndex) -> DispatchResult {
+    let sender = ensure_signed(origin.clone())?;
+    let kitty = Kitties::<T>::take(&sender, kitty_id).ok_or(Error::<T>::InvalidaKittyId)?;
+    // ...
+}
+```
+
 ### pallet_kitties -> lib 的 Trait 与 runtime -> lib的 impl pallet_kitties::Trait for Tuntime 的关系
 
 - pallet_kitties -> lib 里面的Trait 主要是定义trait type的类型，或者说某个type条件需要实现那些Trait 每一个`+`表示需要多一个Trait实现。
